--- a/content/ch04-variables.html
+++ b/content/ch04-variables.html
@@ -209,7 +209,7 @@ var x = 4 + (4 * 5); // Se le asigna el valor 24 a x</pre>
 <pre data-code-language="p5js" data-type="programlisting">
 var x = (4 + 4) * 5; // Se le asigna el valor 40 a x</pre>
 
-<p>En clases de matem&#xE1;ticas se ense&#xF1;a un acr&#xF3;nimo para este orden: PEMDAS, <a contenteditable="false" data-primary="PEMDAS acronym" data-type="indexterm">&nbsp;</a>que significa Par&#xE9;ntesis, Exponentes, Multiplicaci&#xF3;n, Divisi&#xF3;n, Adici&#xF3;n, Substracci&#xF3;n, donde los par&#xE9;ntesis tienen la mayor prioridad y la substracci&#xF3;n la menor.<a contenteditable="false" data-primary="order of operations" data-type="indexterm">&nbsp;</a><a contenteditable="false" data-primary="arithmetic operations" data-secondary="order of" data-type="indexterm">&nbsp;</a>El orden completo de operaciones se encuentra en <a data-type="xref" href="#order_of_operations">Apéndice B</a>.</p>
+<p>En clases de matem&#xE1;ticas se ense&#xF1;a un acr&#xF3;nimo para este orden: PEMDAS, <a contenteditable="false" data-primary="PEMDAS acronym" data-type="indexterm">&nbsp;</a>que significa Par&#xE9;ntesis, Exponentes, Multiplicaci&#xF3;n, Divisi&#xF3;n, Adici&#xF3;n, Substracci&#xF3;n, donde los par&#xE9;ntesis tienen la mayor prioridad y la substracci&#xF3;n la menor.<a contenteditable="false" data-primary="order of operations" data-type="indexterm">&nbsp;</a><a contenteditable="false" data-primary="arithmetic operations" data-secondary="order of" data-type="indexterm">&nbsp;</a>El orden completo de operaciones se encuentra en el <a data-type="xref" href="#order_of_operations">Apéndice B</a>.</p>
 
 <p>Algunos c&#xE1;lculos son usados tan frecuentemente en programaci&#xF3;n que se han elaborado atajos, lo que es &#xFA;til para ahorrar tiempo al escribir. Por ejemplo, puedes sumar a o restar  una variable con un solo operador:</p>
 
@@ -277,7 +277,7 @@ function draw() {
 
 <p>El bucle <code>for</code> es distinto en muchas maneras del c&#xF3;digo que hemos escrito hasta ahora. F&#xED;jate en las llaves, los caracteres <code>{</code> y <code>}</code>. El c&#xF3;digo entre las llaves se llama<a contenteditable="false" data-primary="block" data-type="indexterm">&nbsp;</a> <em>bloque</em>. Este es el c&#xF3;digo que ser&#xE1; repetido en cada iteraci&#xF3;n del bucle <code>for</code>.</p>
 
-<p>Dentro de los par&#xE9;ntesis hay tres declaraciones, separadas por punto y coma, que funcionan en conjunto para controlar cu&#xE1;ntas veces se ejecuta el c&#xF3;digo dentro del bloque. De izquierda a derecha, estas declaraciones son llamadas<a contenteditable="false" data-primary="initialization statement (init)" data-type="indexterm">&nbsp;</a><a contenteditable="false" data-primary="test statement" data-type="indexterm" id="ts4">&nbsp;</a>&nbsp;la <em>inicializaci&#xF3;n</em> (<code>inic</code>), la <em>prueba</em> (test), y el <em>refresco</em> (update):</p>
+<p>Dentro de los par&#xE9;ntesis hay tres declaraciones, separadas por punto y coma, que funcionan en conjunto para controlar cu&#xE1;ntas veces se ejecuta el c&#xF3;digo dentro del bloque. De izquierda a derecha, estas declaraciones son llamadas<a contenteditable="false" data-primary="initialization statement (init)" data-type="indexterm">&nbsp;</a><a contenteditable="false" data-primary="test statement" data-type="indexterm" id="ts4">&nbsp;</a>la <em>inicializaci&#xF3;n</em> (<code>inic</code>), la <em>prueba</em>, y el <em>refresco</em>:</p>
 
 <pre data-code-language="p5js" data-type="programlisting">
 for (inic; prueba; refresco) {
@@ -349,7 +349,7 @@ for (inic; prueba; refresco) {
 </section>
 
 <section data-type="sect2">
-<h2>Ejemplo 4-7: entrenamiento de bucles for</h2>
+<h2>Ejemplo 4-7: probando los bucles for</h2>
 
 <p>El poder definitivo que entregan los bucles <code>for</code> es la habilidad de hacer cambios r&#xE1;pidos a tu c&#xF3;digo. Como el c&#xF3;digo dentro del bloque es ejecutado t&#xED;picamente m&#xFA;ltiples veces, un cambio al bloque es magnificado cuando el c&#xF3;digo es ejecutado. Al modificar <a data-type="xref" href="#ex-4-6">Ejemplo 4-6</a> ligeramente, podemos crear una variedad de patrones distintos:</p>
 
